--- a/e1/minMaxForm.html
+++ b/e1/minMaxForm.html
@@ -1,5 +1,5 @@
 <form action="" method="POST">
-    <label for="min">Minimun</label><input type="number" name="min" id="min" step=1 required>
-    <label for="max">Maximun</label><input type="number" name="max" id="max" step=1 required>
-    <button type="submit" name="submit">Get Randon Number in Between</button>
+    <label for="min">Mínimo</label><input type="number" name="min" id="min" step=1 required>
+    <label for="max">Máximo</label><input type="number" name="max" id="max" step=1 required>
+    <button type="submit" name="submit">Obtener número aleatorio</button>
 </form>
