--- a/e2/twoPasswordsForm.html
+++ b/e2/twoPasswordsForm.html
@@ -1,6 +1,6 @@
 <form action="" method="POST">
-    <label for="password">Password</label><input type="password" name="password" id="password" required>
-    <label for="repeatPassword">Repeat Password</label><input type="password" name="repeatPassword" id="repeatPassword"
-        required>
-    <button type="submit" name="submit">Chech if they're equal</button>
+    <label for="password">Contraseña</label><input type="password" name="password" id="password" required>
+    <label for="repeatPassword">Repetir contraseña</label><input type="password" name="repeatPassword"
+        id="repeatPassword" required>
+    <button type="submit" name="submit">Comprobar si son iguales</button>
 </form>
